Closed Bug 713628 Opened 14 years ago Closed 14 years ago

[IMM] Do nothing if composition string isn't changed even when WM_IME_COMPOSITION is received

Categories

(Core :: Widget: Win32, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: inputmethod)

Attachments

(1 file, 1 obsolete file)

Currently, we're clearing composition string from editor when WM_IME_COMPOSITION indicates neither committing nor composing. We should do nothing this time. I don't know actual case, though.
Summary: [IMM] Do nothing if composition string isn't changed even when WM_IME_COMPOSITION → [IMM] Do nothing if composition string isn't changed even when WM_IME_COMPOSITION is received
Attached patch Patch (obsolete) — Splinter Review
Attachment #584404 - Flags: review?(VYV03354)
This patch removes codes that are added at CVS revisions 3.219 and 3.215. http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/widget/src/windows/nsWindow.cpp&mark=&rev=3.219#3012 Are those comments no longer applied?
Thank you, it's nice information. The change should be for bug 13494. But looks like the change of 3.219 also fixed the bug by another approach. Even if we make our editor's composition string empty, WM_COMPOSITION_END is needed because nsEditor exits from composition mode only when it receives NS_COMPOSITION_END event. So, the change of 3.215 isn't enough for current nsEditor. The change of 3.219 makes the composition string empty before dispatching NS_COMPOSITION_END event. It is right way for current nsEditor. On the other hand, there might still be such IME. And some of them might not send WM_IME_ENDCOMPOSITION even when composition string becomes empty (e.g., keeps composing mode until hitting Enter or ESC). If so, my patch must make regression. But I don't think the current code is using correct way because the block *assumes* the composition string must be empty at the param. I'll post another patch tomorrow.
Attached patch PatchSplinter Review
Sorry for the delay. I think that this is the right approach. Win7 + ATOK 2011 sends WM_IME_COMPOSITION with 0 for lParam when I delete all composing characters by BS key. When composition string is empty, we should dispatch empty text event. Otherwise, we should dispatch text event normally.
Attachment #584404 - Attachment is obsolete: true
Attachment #584404 - Flags: review?(VYV03354)
Attachment #591709 - Flags: review?(VYV03354)
Comment on attachment 591709 [details] [diff] [review] Patch r=me assuming it passes the test.
Attachment #591709 - Flags: review?(VYV03354) → review+
Whiteboard: [inbound]
Target Milestone: --- → mozilla13
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: