Bug 713628 When lParam of WM_IME_COMPOSITION indicates neither committing nor composing, should dispatch better text event r=emk